KNOX-879 - Fix url encoding issue for KnoxSSO